Fix overlapping sequence CSS.

--- a/static/style.css
+++ b/static/style.css
@@ -11,7 +11,3 @@ footer {
 	bottom: 0px;
 	padding-bottom: 10px;
 }
-
-.cluster_accordion {
-	margin-bottom: -10px;
-}
